k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes
  namespace: pipeleap
  labels:
    app: hermes
spec:
  selector:
    app: hermes
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 8081
      targetPort: 8081
  type: ClusterIP
